--- a/react-cicd-app/src/index.css
+++ b/react-cicd-app/src/index.css
@@ -26,6 +26,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
+  width: 100%;
   min-width: 320px;
   min-height: 100vh;
 }
